Fix overflow bug on Chrome
When clicking on the checkboxes on the last column, Chrome shifts the entire element to the left.

--- a/_sass/_compare.scss
+++ b/_sass/_compare.scss
@@ -81,6 +81,7 @@
 }
 
 .compare-options {
+	position: relative;
 	overflow: auto;
 }
 
