--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -84,6 +84,7 @@
 }
 
 .settings-options {
+	position: relative;
 	overflow: auto;
 }
 
